--- a/style.css
+++ b/style.css
@@ -7,9 +7,53 @@
 .page {
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 40px;
+}
+
+.header {
+  margin: 0 auto;
+  width: 100%;
+  min-height: 300px;
+  background-color: #fff;
+  -webkit-clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 25%, 100% 0);
+          clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 25%, 100% 0);
 }
 
 .navigation__list {
+  margin: 0;
   list-style-type: none;
+}
+
+.cover {
+  margin-top: 10px;
+  min-height: 500px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+}
+
+.cover__text {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  -webkit-clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 0);
+          clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 0);
+}
+
+.cover__img {
+  margin: 0 auto;
+  width: 70%;
+  -webkit-filter: drop-shadow(0 0 30px #02355c);
+  filter: drop-shadow(0 0 30px #02355c);
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+}
+
+.cover__img:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 /*# sourceMappingURL=style.css.map */
