--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 $one:  #014d81;
 $two: #DD8833;
+$shadow: #02355c;
 
 .root {
     margin: 0;
@@ -10,10 +11,21 @@ $two: #DD8833;
 .page {
     max-width: 1440px;
     margin: 0 auto;
+    padding: 0 40px;
 }
 
 .header {
-
+    margin: 0 auto;
+    width: 100%;
+    min-height: 300px;
+    background-color: #fff;
+    clip-path: polygon(
+        0 0,
+        0 100%,
+        50% 100%,
+        100% 25%,
+        100% 0
+    );
 }
 
 .logo {
@@ -25,9 +37,44 @@ $two: #DD8833;
 }
 
 .navigation__list {
+    margin: 0;
     list-style-type: none;
 }
 
 .navigation__item {
 
+}
+
+.main {
+
+}
+
+.cover {
+    margin-top: 10px;
+    min-height: 500px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.cover__text {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    clip-path: polygon(
+        0 0,
+        0 100%,
+        50% 100%,
+        100% 0
+    );
+}
+
+.cover__img {
+    margin: 0 auto;
+    width: 70%;
+    -webkit-filter: drop-shadow(0 0 30px $shadow);
+    filter: drop-shadow(0 0 30px $shadow);
+    transition: transform 0.5s;
+    &:hover {
+        transform: scale(1.1);
+    }
 }
