--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,18 @@ $one:  #014d81;
 $two: #DD8833;
 $shadow: #02355c;
 
+@keyframes puls {
+    from {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.95);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
 .root {
     margin: 0;
     margin: 0;
@@ -73,8 +85,5 @@ $shadow: #02355c;
     width: 70%;
     -webkit-filter: drop-shadow(0 0 30px $shadow);
     filter: drop-shadow(0 0 30px $shadow);
-    transition: transform 0.5s;
-    &:hover {
-        transform: scale(1.1);
-    }
+    animation: puls linear infinite 1.5s;
 }
