--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@
 .root {
   margin: 0;
   margin: 0;
-  background-color: #014d81;
+  background: -webkit-gradient(linear, left top, right top, color-stop(4%, #000), color-stop(40%, #014d81));
+  background: linear-gradient(90deg, #000 4%, #014d81 40%);
 }
 
 .page {
@@ -85,8 +86,8 @@
   min-height: 500px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-columns: (50%)[2];
+      grid-template-columns: repeat(2, 50%);
   border-left: 5px solid #DD8833;
 }
 
@@ -99,11 +100,6 @@
 }
 
 .cover__img {
-  margin: 0 auto;
-  width: 70%;
-  -webkit-filter: drop-shadow(0 0 30px #02355c);
-  filter: drop-shadow(0 0 30px #02355c);
-  -webkit-animation: puls linear infinite 1.5s;
-          animation: puls linear infinite 1.5s;
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
