--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ $shadow: #02355c;
 .root {
     margin: 0;
     margin: 0;
-    background-color: $one;
+    background: linear-gradient(90deg, #000 4%, #014d81 40%);
 }
 
 .page {
@@ -84,7 +84,7 @@ $shadow: #02355c;
     margin-top: 10px;
     min-height: 500px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 50%);
     border-left: 5px solid $two;
 }
 
@@ -101,9 +101,10 @@ $shadow: #02355c;
 }
 
 .cover__img {
-    margin: 0 auto;
-    width: 70%;
-    -webkit-filter: drop-shadow(0 0 30px $shadow);
-    filter: drop-shadow(0 0 30px $shadow);
-    animation: puls linear infinite 1.5s;
+    // margin: 0 auto;
+    // width: 70%;
+    // -webkit-filter: drop-shadow(0 0 30px $shadow);
+    // filter: drop-shadow(0 0 30px $shadow);
+    // animation: puls linear infinite 1.5s;
+    width: 100%;
 }
