--- a/style.css
+++ b/style.css
@@ -1,33 +1,4 @@
-@-webkit-keyframes puls {
-  from {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  50% {
-    -webkit-transform: scale(0.95);
-            transform: scale(0.95);
-  }
-  to {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-}
-
-@keyframes puls {
-  from {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  50% {
-    -webkit-transform: scale(0.95);
-            transform: scale(0.95);
-  }
-  to {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-}
-
+@charset "UTF-8";
 .root {
   margin: 0;
   margin: 0;
@@ -51,11 +22,12 @@
       grid-template-columns: 1.2fr 0.8fr;
   margin: 0 auto;
   width: 100%;
-  min-height: 300px;
+  height: 20.8vw;
+  max-height: 300px;
   border-left: 5px solid #DD8833;
   background-color: #fff;
-  -webkit-clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 25%, 100% 0);
-          clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 25%, 100% 0);
+  -webkit-clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 50%, 100% 0);
+          clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 50%, 100% 0);
 }
 
 .header__title {
@@ -83,7 +55,8 @@
 
 .cover {
   margin-top: 10px;
-  min-height: 500px;
+  height: 34.7vw;
+  max-height: 500px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (50%)[2];
@@ -95,11 +68,40 @@
   width: 100%;
   height: 100%;
   background-color: #fff;
-  -webkit-clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 0);
-          clip-path: polygon(0 0, 0 100%, 50% 100%, 100% 0);
+  -webkit-clip-path: polygon(0 0, 0 100%, 80% 100%, 100% 0);
+          clip-path: polygon(0 0, 0 100%, 80% 100%, 100% 0);
 }
 
 .cover__img {
-  width: 100%;
+  background-image: url(./images/слайдер1.jpg);
+  background-size: 75vw;
+  background-position: right 1px;
+  width: 119.5%;
+  height: 130%;
+  -webkit-clip-path: polygon(17% 23%, 0 100%, 0 100%, 100% 100%, 100% 0);
+          clip-path: polygon(17% 23%, 0 100%, 0 100%, 100% 100%, 100% 0);
+  -webkit-transform: translate(-15.5%, -23%);
+          transform: translate(-15.5%, -23%);
+  position: relative;
+}
+
+.cover__btn {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  width: 50px;
+  height: 50px;
+  background-image: url(./images/next.png);
+  background-size: cover;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  -webkit-transition: background-image 0.5s;
+  transition: background-image 0.5s;
+}
+
+.cover__btn:hover {
+  background-image: url(./images/next-white.png);
 }
 /*# sourceMappingURL=style.css.map */
