--- a/style.scss
+++ b/style.scss
@@ -2,18 +2,6 @@ $one:  #014d81;
 $two: #DD8833;
 $shadow: #02355c;
 
-@keyframes puls {
-    from {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(0.95);
-    }
-    to {
-        transform: scale(1);
-    }
-}
-
 .root {
     margin: 0;
     margin: 0;
@@ -33,14 +21,15 @@ $shadow: #02355c;
     grid-template-columns: 1.2fr 0.8fr;
     margin: 0 auto;
     width: 100%;
-    min-height: 300px;
+    height: 20.8vw;
+    max-height: 300px;
     border-left: 5px solid $two;
     background-color: #fff;
     clip-path: polygon(
         0 0,
         0 100%,
         50% 100%,
-        100% 25%,
+        100% 50%,
         100% 0
     );
 }
@@ -82,7 +71,8 @@ $shadow: #02355c;
 
 .cover {
     margin-top: 10px;
-    min-height: 500px;
+    height: 34.7vw;
+    max-height: 500px;
     display: grid;
     grid-template-columns: repeat(2, 50%);
     border-left: 5px solid $two;
@@ -95,16 +85,43 @@ $shadow: #02355c;
     clip-path: polygon(
         0 0,
         0 100%,
-        50% 100%,
+        80% 100%,
         100% 0
     );
 }
 
 .cover__img {
-    // margin: 0 auto;
-    // width: 70%;
-    // -webkit-filter: drop-shadow(0 0 30px $shadow);
-    // filter: drop-shadow(0 0 30px $shadow);
-    // animation: puls linear infinite 1.5s;
-    width: 100%;
+    background-image: url(./images/слайдер1.jpg);
+    background-size: 75vw;
+    background-position: right 1px;
+    width: 119.5%;
+    height: 130%;
+    clip-path: polygon(
+        17% 23%,
+        0 100%,
+        0 100%,
+        100% 100%,
+        100% 0
+    );
+    transform: translate(-15.5%, -23%);
+    position: relative;
+}
+
+.cover__btn {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    width: 50px;
+    height: 50px;
+    background-image: url(./images/next.png);
+    background-size: cover;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: background-image 0.5s;
+    &:hover {
+        background-image: url(./images/next-white.png);
+
+    }
 }
