--- a/style.scss
+++ b/style.scss
@@ -91,7 +91,7 @@ $shadow: #02355c;
 }
 
 .cover__img {
-    background-image: url(./images/слайдер1.jpg);
+    background-image: url(./images/sl1.jpg);
     background-size: 75vw;
     background-position: right 1px;
     width: 119.5%;
