--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .root {
   margin: 0;
   margin: 0;
@@ -73,7 +72,7 @@
 }
 
 .cover__img {
-  background-image: url(./images/слайдер1.jpg);
+  background-image: url(./images/sl1.jpg);
   background-size: 75vw;
   background-position: right 1px;
   width: 119.5%;
