--- a/style.scss
+++ b/style.scss
@@ -91,7 +91,7 @@ $shadow: #02355c;
 }
 
 .cover__img {
-    background-image: url(./images/sl1.jpg);
+    background-image: url(./images/slide-bar/sl1.jpg);
     background-size: 75vw;
     background-position: right 1px;
     width: 119.5%;
@@ -107,12 +107,32 @@ $shadow: #02355c;
     position: relative;
 }
 
-.cover__btn {
+.cover__next {
     position: absolute;
     right: 20px;
     bottom: 20px;
     width: 50px;
     height: 50px;
+    background-image: url(./images/next.png);
+    background-size: cover;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: background-image 0.5s;
+    &:hover {
+        background-image: url(./images/next-white.png);
+
+    }
+}
+
+.cover__back {
+    position: absolute;
+    right: 90px;
+    bottom: 20px;
+    width: 50px;
+    height: 50px;
+    transform: rotate(180deg);
     background-image: url(./images/next.png);
     background-size: cover;
     background-color: transparent;
